<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/errorMsg"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="12dip"
        android:textStyle="bold"
        />


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_name"
        android:layout_gravity="center"
        android:textSize="12dip"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/menuName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_gravity="center"
        android:textSize="12dip"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/menuPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:layout_gravity="center"
        android:numeric="decimal"
        android:hint="@string/price_hint"/>

    <!--<TextView-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/isAvailable"-->
        <!--android:layout_gravity="center"-->
        <!--android:textSize="12dip"-->
        <!--android:textStyle="bold"/>-->

    <!--<EditText-->
        <!--android:id="@+id/menuIsAvailable"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:minWidth="250dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:hint="@string/isAvailableHint"-->
        <!--/>-->

    <CheckBox
        android:layout_marginTop="20dp"
        android:id="@+id/menuIsAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isAvailable"
        android:layout_gravity="center"
        android:textSize="12dip"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/addMenuBtn"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_db"
        android:layout_gravity="center"/>


</LinearLayout>
